2017-05-19 forms, end of session no 4

--- a/templates/base.html
+++ b/templates/base.html
@@ -5,7 +5,7 @@
     <title>biblio app</title>
 </head>
 <body>
-    <h1>biblio app<h1>
+    <h1>biblio app</h1>
     {% block content %}
     {% endblock %}
 </body>
