--- a/templates/base.html
+++ b/templates/base.html
@@ -5,8 +5,11 @@
     <title>biblio app</title>
 </head>
 <body>
-    <h1>biblio app</h1>
-    {% block content %}
-    {% endblock %}
+<h1>biblio app</h1>
+{% block content %}
+    <div>
+        <a href="/">Powrót do głównej strony</a>
+    </div>
+{% endblock %}
 </body>
 </html>
