--- a/templates/base.html
+++ b/templates/base.html
@@ -1,7 +1,10 @@
+{% load static %}
 <!DOCTYPE html>
 <html lang="pl">
 <head>
     <meta charset="UTF-8">
+    <link rel="stylesheet" type="text/css"
+          href="{% static 'css/biblio_main.css' %}">
     <title>biblio app</title>
 </head>
 <body>
