--- a/shelf/templates/shelf/author_detail.html
+++ b/shelf/templates/shelf/author_detail.html
@@ -11,7 +11,7 @@
     <ul>
         {% for book in object.book_set.all %}
             <li>
-                <a href="{% url 'shelf:book-detail' book.id %}">
+                <a href="{{ book.get_absolute_url }}">
                     {{ book.title }}
                 </a>
             </li>
