2017-05-22 related_name is working, changes in global css, still in session no 7

--- a/shelf/templates/shelf/book_detail.html
+++ b/shelf/templates/shelf/book_detail.html
@@ -17,7 +17,7 @@
     </p>
     <h3>Wydania:</h3>
     <ul>
-        {% for edition in object.bookedition_set.all %}
+        {% for edition in object.editions.all %}
             <li>{{ edition.publisher.name }}, {{ edition.date }}</li>
         {% endfor %}
     </ul>
