2017-05-22 custom filter, custom tag, main page view based on class, end of session no 7

--- a/shelf/templates/shelf/book_detail.html
+++ b/shelf/templates/shelf/book_detail.html
@@ -17,9 +17,5 @@
         {% endfor %}
     </p>
     <h3>Wydania:</h3>
-    <ul>
-        {% for edition in object.editions.all %}
-            <li>{{ edition.publisher.name }}, {{ edition.date|pub_date }}</li>
-        {% endfor %}
-    </ul>
+    {% show_editions object %}
 {% endblock %}
