2017-05-23 db and migration fixed, polish translations, new user model, before applying fieldsets in admin app, still in session no 8

--- a/templates/index.html
+++ b/templates/index.html
@@ -5,5 +5,6 @@
     <ul>
         <li><a href="/shelf/authors">Lista autorów</a></li>
         <li><a href="/shelf/books">Lista książek</a></li>
+        <li><a href="/admin">Panel administracyjny</a></li>
     </ul>
 {% endblock %}
