--- a/templates/base.html
+++ b/templates/base.html
@@ -8,6 +8,17 @@
     <title>biblio app</title>
 </head>
 <body>
+{% block login %}
+    <div>
+        {% if user.is_authenticated %}
+            <a href="{% url 'account_logout' %}">Wyloguj się</a>
+        {% else %}
+            <a href="{% url 'account_login' %}">Zaloguj się</a>
+            | <a href="{% url 'account_signup' %}">Załóż konto</a>
+        {% endif %}
+    </div>
+    <hr>
+{% endblock %}
 <h1>biblio app</h1>
 {% block content %}
     <div>
