2017-05-24 bootstrap added to static files, bootstrap css in base.html, package.json added, inside session no 10

--- a/templates/base.html
+++ b/templates/base.html
@@ -4,6 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <link rel="stylesheet" type="text/css"
+          href="{% static 'bootstrap/dist/css/bootstrap.min.css' %}">
+    <link rel="stylesheet" type="text/css"
           href="{% static 'css/biblio_main.css' %}">
     <title>biblio app</title>
 </head>
