2017-05-25 static files in production, media files, before changes in avatars folder, still in session no 10

--- a/templates/base.html
+++ b/templates/base.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" type="text/css"
           href="{% static 'bootstrap/dist/css/bootstrap.min.css' %}">
     <link rel="stylesheet" type="text/css"
-          href="{% static 'css/biblio_main.css' %}">
+          href="{% static 'biblio/css/biblio_main.css' %}">
     <title>biblio app</title>
 </head>
 <body>
@@ -27,6 +27,8 @@
     </div>
     <hr>
 {% endblock %}
+<img src="{% static 'biblio/img/library.svg' %}" width="10%" height="10%"
+     alt="biblio app">
 <h1>biblio app</h1>
 {% block content %}
     <div>
