2017-05-25 django-bootstrap3 in base.html, bootstrap and jquery in package.json, bootstrap3 config in settings.py, duplicated config in Production, still in session no 10

--- a/templates/base.html
+++ b/templates/base.html
@@ -1,15 +1,19 @@
 {% load static %}
+{% load bootstrap3 %}
 <!DOCTYPE html>
 <html lang="pl">
 <head>
     <meta charset="UTF-8">
+    <title>biblio app</title>
     <link rel="stylesheet" type="text/css"
           href="{% static 'bootstrap/dist/css/bootstrap.min.css' %}">
     <link rel="stylesheet" type="text/css"
           href="{% static 'biblio/css/biblio_main.css' %}">
-    <title>biblio app</title>
+    {% bootstrap_css %}
+    {% bootstrap_javascript %}
 </head>
 <body>
+{% bootstrap_messages %}
 {% block login %}
     <div>
         {% if user.is_authenticated %}
