--- a/static/biblio/css/biblio_main.css
+++ b/static/biblio/css/biblio_main.css
@@ -1,3 +1,8 @@
 a:link, a:visited, a:hover, a:active {
     color: darkred;
 }
+
+#login-block {
+    margin-top: 10px;
+    margin-bottom: 10px;
+}
