2017-05-28 show items with custom template tag, still in session no 12

--- a/shelf/templates/tags/show_editions.html
+++ b/shelf/templates/tags/show_editions.html
@@ -1,6 +1,10 @@
 {% load shelf_tags %}
 <ul>
     {% for edition in editions %}
-        <li>{{ edition.publisher.name }}, {{ edition.date|pub_date }}</li>
+        <li>
+            {{ edition.publisher.name }}
+            ({{ edition.date|pub_date }}),
+            isbn: {{ edition.isbn }}
+        </li>
     {% endfor %}
 </ul>
