--- a/shelf/templates/shelf/book_detail.html
+++ b/shelf/templates/shelf/book_detail.html
@@ -18,4 +18,6 @@
     </p>
     <h3>Wydania:</h3>
     {% show_editions object %}
+    <h3>Egzemplarze:</h3>
+    {% show_items object %}
 {% endblock %}
